# rio-siege

./: .bumpversion.cfg  CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
cogeo_siege/: __init__.py  siege.py
cogeo_siege/scripts/: cli.py
rio_siege/: siege.py
rio_siege/scripts/: __init__.py  cli.py
tests/: __init__.py  test_cli.py
