
[metadata]
name = cogeo_siege
version = attr: cogeo_siege.__version__
url = https://github.com/developmentseed/cogeo-siege
project_urls =
    Source Code = https://github.com/developmentseed/cogeo-siege
    Issue Tracker = https://github.com/developmentseed/cogeo-siege/issues/
    Twitter = https://twitter.com/developmentseed
license = BSD-3-Clause
license_files = LICENSE
author = Vincent Sarago
author_email = vincent@developmentseed.org
maintainer = cogeotiff
maintainer_email = vincent@developmentseed.org
description = Create Siege configuration file from COG.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
include_package_data = True
python_requires = >= 3.7
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
exclude = tests

[options.entry_points]
console_scripts =
    cogeo-siege = cogeo_siege.scripts.cli:siege

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    cogeo_siege
    tests

[coverage:paths]
source =
    src
    */site-packages

[bumpversion]
current_version = 0.0.1
commit = True
tag = True
tag_name = {new_version}

[bumpversion:file:cogeo_siege/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[isort]
profile = black
known_first_party = cogeo_siege
known_third_party = rio_tiler,morecantile

[flake8]
ignore = E501,W503,E203
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist
max-complexity = 12
max-line-length = 90

[mypy]
no_strict_optional = True

[pydocstyle]
select = D1
match = (?!test).*\.py
